@startuml 67Bet_InfrastructureLayer
!theme plain
scale max 2200 width
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
hide empty members

title 67Bet - Diagram warstwy infrastruktury / dostepu do danych

legend right
  <<implemented>> - element istnieje w aktualnym kodzie
  <<external>> - klasa/biblioteka zewnetrzna, np. EF Core
  Linia z pustym trojkatem - implementacja interfejsu repozytorium
  Linia ciagla --> - uzycie DbContext lub DbSet
endlegend

package "External infrastructure" {
    class DbContext <<external>>
    class DbSet<T> <<external>>
    class ModelBuilder <<external>>
}

package "Identity Infrastructure" {
    class IdentityDbContext <<implemented>> {
        +Users : DbSet<User>
        +IdentityDbContext(options: DbContextOptions<IdentityDbContext>)
        #OnModelCreating(modelBuilder: ModelBuilder) : void
    }

    class UserRepository <<implemented>> {
        -_context : IdentityDbContext
        +GetByIdAsync(id: Guid) : Task<User?>
        +GetByEmailAsync(email: string) : Task<User?>
        +AddAsync(user: User) : Task
        +UpdateAsync(user: User) : Task
    }
}

package "Wallet Infrastructure" {
    class WalletDbContext <<implemented>> {
        +Wallets : DbSet<Wallet>
        +Transactions : DbSet<Transaction>
        +WalletDbContext(options: DbContextOptions<WalletDbContext>)
        #OnModelCreating(modelBuilder: ModelBuilder) : void
    }

    class WalletRepository <<implemented>> {
        -_context : WalletDbContext
        +GetByUserIdAsync(userId: Guid) : Task<Wallet?>
        +GetByIdAsync(id: Guid) : Task<Wallet?>
        +AddAsync(wallet: Wallet) : Task
        +UpdateAsync(wallet: Wallet) : Task
    }

    class TransactionRepository <<implemented>> {
        -_context : WalletDbContext
        +GetByIdAsync(id: Guid) : Task<Transaction?>
        +GetByWalletIdAsync(walletId: Guid) : Task<IEnumerable<Transaction>>
        +AddAsync(transaction: Transaction) : Task
        +UpdateAsync(transaction: Transaction) : Task
    }
}

package "Betting Infrastructure" {
    class BettingDbContext <<implemented>> {
        +Sports : DbSet<Sport>
        +Events : DbSet<Event>
        +Markets : DbSet<Market>
        +Outcomes : DbSet<Outcome>
        +Tickets : DbSet<Ticket>
        +Bets : DbSet<Bet>
        +BettingDbContext(options: DbContextOptions<BettingDbContext>)
        #OnModelCreating(modelBuilder: ModelBuilder) : void
    }

    class SportRepository <<implemented>> {
        -_context : BettingDbContext
        +GetByIdAsync(id: Guid) : Task<Sport?>
        +GetAllAsync() : Task<IEnumerable<Sport>>
        +AddAsync(sport: Sport) : Task
    }

    class EventRepository <<implemented>> {
        -_context : BettingDbContext
        +GetByIdAsync(id: Guid) : Task<Event?>
        +GetActiveEventsAsync() : Task<IEnumerable<Event>>
        +AddAsync(event: Event) : Task
        +UpdateAsync(event: Event) : Task
    }

    class MarketRepository <<implemented>> {
        -_context : BettingDbContext
        +GetByIdAsync(id: Guid) : Task<Market?>
        +GetByEventIdAsync(eventId: Guid) : Task<IEnumerable<Market>>
        +AddAsync(market: Market) : Task
    }

    class TicketRepository <<implemented>> {
        -_context : BettingDbContext
        +GetByIdAsync(id: Guid) : Task<Ticket?>
        +GetByUserIdAsync(userId: Guid) : Task<IEnumerable<Ticket>>
        +AddAsync(ticket: Ticket) : Task
        +UpdateAsync(ticket: Ticket) : Task
    }
}

package "Custom Bet Infrastructure" {
    class CustomBetDbContext <<implemented>> {
        +CustomBetRequests : DbSet<CustomBetRequest>
        +CustomBetDbContext(options: DbContextOptions<CustomBetDbContext>)
        #OnModelCreating(modelBuilder: ModelBuilder) : void
    }

    class CustomBetRepository <<implemented>> {
        -_context : CustomBetDbContext
        +GetByIdAsync(id: Guid) : Task<CustomBetRequest?>
        +GetByUserIdAsync(userId: Guid) : Task<IEnumerable<CustomBetRequest>>
        +GetPendingRequestsAsync() : Task<IEnumerable<CustomBetRequest>>
        +AddAsync(request: CustomBetRequest) : Task
        +UpdateAsync(request: CustomBetRequest) : Task
    }
}

package "Repository interfaces from Domain" {
    interface IUserRepository <<implemented>>
    interface IWalletRepository <<implemented>>
    interface ITransactionRepository <<implemented>>
    interface ISportRepository <<implemented>>
    interface IEventRepository <<implemented>>
    interface IMarketRepository <<implemented>>
    interface ITicketRepository <<implemented>>
    interface ICustomBetRepository <<implemented>>
}

package "Domain entities persisted by Infrastructure" {
    class User <<domain>>
    class Wallet <<domain>>
    class Transaction <<domain>>
    class Sport <<domain>>
    class Event <<domain>>
    class Market <<domain>>
    class Outcome <<domain>>
    class Ticket <<domain>>
    class Bet <<domain>>
    class CustomBetRequest <<domain>>
}

' Dziedziczenie po EF Core DbContext
DbContext <|-- IdentityDbContext
DbContext <|-- WalletDbContext
DbContext <|-- BettingDbContext
DbContext <|-- CustomBetDbContext

' Implementacje repozytoriow
IUserRepository <|.. UserRepository
IWalletRepository <|.. WalletRepository
ITransactionRepository <|.. TransactionRepository
ISportRepository <|.. SportRepository
IEventRepository <|.. EventRepository
IMarketRepository <|.. MarketRepository
ITicketRepository <|.. TicketRepository
ICustomBetRepository <|.. CustomBetRepository

' Repozytoria korzystaja z kontekstow EF Core
UserRepository --> IdentityDbContext : uses
WalletRepository --> WalletDbContext : uses
TransactionRepository --> WalletDbContext : uses
SportRepository --> BettingDbContext : uses
EventRepository --> BettingDbContext : uses
MarketRepository --> BettingDbContext : uses
TicketRepository --> BettingDbContext : uses
CustomBetRepository --> CustomBetDbContext : uses

' DbContext mapuje encje domenowe jako DbSet
IdentityDbContext --> User : DbSet
WalletDbContext --> Wallet : DbSet
WalletDbContext --> Transaction : DbSet
BettingDbContext --> Sport : DbSet
BettingDbContext --> Event : DbSet
BettingDbContext --> Market : DbSet
BettingDbContext --> Outcome : DbSet
BettingDbContext --> Ticket : DbSet
BettingDbContext --> Bet : DbSet
CustomBetDbContext --> CustomBetRequest : DbSet

IdentityDbContext ..> ModelBuilder : configures
WalletDbContext ..> ModelBuilder : configures
BettingDbContext ..> ModelBuilder : configures
CustomBetDbContext ..> ModelBuilder : configures

note bottom of BettingDbContext
BettingDbContext zawiera mapowania EF Core dla sportow,
wydarzen, rynkow, wynikow, kuponow oraz zakladow.
end note

note right of WalletDbContext
WalletDbContext mapuje Wallet i Transaction.
Pole Version w Wallet jest skonfigurowane
jako concurrency token.
end note

note bottom of CustomBetDbContext
W aktualnym kodzie CustomBetDbContext znajduje sie
w pliku CustomBetRepository.cs w warstwie Infrastructure.
end note

@enduml
